--- a/frontend/src/components/Header/header.module.css
+++ b/frontend/src/components/Header/header.module.css
@@ -4,7 +4,7 @@
     border-bottom: 2px solid #e72929;
 }
 a{
-    text-decoration: none;
+    text-decoration: none !important;
 }
 .header a {
     color: #af1313;
@@ -28,11 +28,11 @@ a{
     padding: 1rem;
     display: flex;
     align-items: center;
-    font-size: 37px;
+    font-size: 2.5rem;
     
 }
 .logo img{
-    height: 77px;
+    height: 6rem;
     margin-right: 7px;
 }
 
@@ -46,7 +46,7 @@ a{
     padding: 1rem;
     display: inline-block;
     font-weight: 500;
-    font-size: 17px;
+    font-size: 1rem;
 }
 nav {
     display: flex;
@@ -60,7 +60,7 @@ nav a {
     color: black;
     padding: 0.5rem 1rem;
     margin-left: 5px;
-    font-size: 23px;
+    font-size: 1.5rem;
     font-weight: 450;
 }
 .active {
