--- a/frontend/src/components/Search/search.module.css
+++ b/frontend/src/components/Search/search.module.css
@@ -9,14 +9,14 @@
 
 .container input {
     border-radius: 10rem 0 0 10rem;
-    border: none;
+    border: none !important;
     height: 3rem;
     width: 20rem;
     background-color: #f1f1f1;
     padding-left: 1.2rem;
     font-size: 1rem;
     font-weight: 500;
-    outline: none;
+    outline: none !important;
     box-sizing: border-box;
     /* Đảm bảo padding không làm thay đổi kích thước */
 }
