--- a/frontend/src/pages/Order/order.module.css
+++ b/frontend/src/pages/Order/order.module.css
@@ -7,7 +7,7 @@
 
 .content {
     padding: 0.5rem;
-    background-color: #cfcfcf;
+    background-color: #e9e7e7;
     border-radius: 3rem;
     width: 33rem;
     display: flex;
