--- a/frontend/src/pages/Food/foodPage.module.css
+++ b/frontend/src/pages/Food/foodPage.module.css
@@ -54,10 +54,19 @@
     padding: 1rem;
     border-radius: 10rem;
     outline: none;
-    width: 80%;
+    width: 50%;
+    height: 30%;
 }
 
 .container button:hover{
     opacity: 0.9;
     cursor: pointer;
+}
+.orderFood {
+    display: flex;
+    align-items: center;
+}
+.orderFood input {
+    width: 30%;
+    margin-right: 1rem;
 }
