--- a/frontend/src/pages/Login/loginPage.module.css
+++ b/frontend/src/pages/Login/loginPage.module.css
@@ -1,10 +1,31 @@
-.gradientCustom {
-    /* fallback for old browsers */
-    /* background-color: #6a11cb; */
-
-    /* Chrome 10-25, Safari 5.1-6 */
-    /* background-color: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1)); */
-
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+.container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+
+.content {
+    padding: 0.5rem;
+    background-color: #e9e7e7;
+    border-radius: 3rem;
+    width: 33rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    
+}
+.infor{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 7rem;
+}
+input {
+    width: 70%;
+}
+.error{
+    color: red;
+}
+
