--- a/frontend/src/pages/AccountsAdmin/accountsAdmin.module.css
+++ b/frontend/src/pages/AccountsAdmin/accountsAdmin.module.css
@@ -25,7 +25,7 @@ a.add_food:hover {
 .list_item_title{
     display: grid;
     grid-template-columns:
-        minmax(5rem, 7rem) minmax(5rem, 7rem) minmax(5rem, 7rem) minmax(5rem, 20rem) minmax(5rem, 10rem) minmax(5rem, 10rem);
+        minmax(5rem, 7rem) minmax(5rem, 7rem) minmax(5rem, 15rem) minmax(5rem, 10rem) minmax(5rem, 7rem) minmax(5rem, 10rem) minmax(5rem, 10rem);
     font-size: 1.3rem;
     height: 5rem;
     align-items: center;
@@ -38,11 +38,19 @@ a.add_food:hover {
 .list_item {
     display: grid;
     grid-template-columns:
-        minmax(5rem, 7rem) minmax(5rem, 7rem) minmax(5rem, 7rem) minmax(5rem, 20rem) minmax(5rem, 10rem) minmax(5rem, 10rem);
+        minmax(5rem, 7rem) minmax(5rem, 7rem) minmax(5rem, 15rem) minmax(5rem, 10rem) minmax(5rem, 7rem) minmax(5rem, 10rem) minmax(5rem, 10rem);
     font-size: 1.2rem;
     height: 5rem;
     align-items: center;
     justify-content: center;
+}
+.list_item>div {
+    white-space: nowrap;
+    /* Không cho nội dung xuống dòng */
+    overflow: hidden;
+    /* Ẩn phần nội dung thừa */
+    text-overflow: ellipsis;
+    /* Hiển thị "..." khi nội dung bị cắt */
 }
 
 .list_item img {
