--- a/frontend/src/pages/OrdersManagement/ordersManagementPage.module.css
+++ b/frontend/src/pages/OrdersManagement/ordersManagementPage.module.css
@@ -26,7 +26,8 @@ a.add_food:hover {
 .list_item_title {
     display: grid;
     grid-template-columns:
-        minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(10rem, 15rem) minmax(5rem, 7rem) minmax(5rem, 7rem);    font-size: 1.3rem;
+        minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(5rem, 7rem) minmax(10rem, 15rem) minmax(5rem, 7rem) minmax(5rem, 7rem);
+    font-size: 1.3rem;
     height: 5rem;
     align-items: center;
     justify-content: center;
@@ -34,11 +35,19 @@ a.add_food:hover {
     font-weight: 500;
 
 }
+.list_item>div {
+    white-space: nowrap;
+    /* Không cho nội dung xuống dòng */
+    overflow: hidden;
+    /* Ẩn phần nội dung thừa */
+    text-overflow: ellipsis;
+    /* Hiển thị "..." khi nội dung bị cắt */
+}
 
 .list_item {
     display: grid;
     grid-template-columns:
-        minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(10rem, 15rem) minmax(5rem, 7rem) minmax(5rem, 7rem);
+        minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(5rem, 7rem) minmax(10rem, 15rem) minmax(5rem, 7rem) minmax(5rem, 7rem);
     font-size: 1.2rem;
     height: 5rem;
     align-items: center;
