--- a/frontend/src/pages/OrderDetailPage/orderDetaiPage.module.css
+++ b/frontend/src/pages/OrderDetailPage/orderDetaiPage.module.css
@@ -23,10 +23,10 @@ a.add_food:hover {
     opacity: 0.9;
 }
 
-.list_item_title {
+.list_item_title_table {
     display: grid;
     grid-template-columns:
-        minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(5rem, 7rem) minmax(10rem, 15rem) minmax(5rem, 7rem) minmax(5rem, 7rem) minmax(5rem, 7rem);
+        minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem);
     font-size: 1.3rem;
     height: 5rem;
     align-items: center;
@@ -35,7 +35,45 @@ a.add_food:hover {
     font-weight: 500;
 
 }
-.list_item>div {
+.list_item_table {
+    display: grid;
+    grid-template-columns:
+        minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem);
+    font-size: 1.2rem;
+    height: 5rem;
+    align-items: center;
+    justify-content: center;
+}
+.list_item_table>div {
+    white-space: nowrap;
+    /* Không cho nội dung xuống dòng */
+    overflow: hidden;
+    /* Ẩn phần nội dung thừa */
+    text-overflow: ellipsis;
+    /* Hiển thị "..." khi nội dung bị cắt */
+}
+.list_item_title_items {
+    display: grid;
+    grid-template-columns:
+        minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem);
+    font-size: 1.3rem;
+    height: 5rem;
+    align-items: center;
+    justify-content: center;
+    color: red;
+    font-weight: 500;
+
+}
+.list_item_items {
+    display: grid;
+    grid-template-columns:
+        minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem);
+    font-size: 1.2rem;
+    height: 5rem;
+    align-items: center;
+    justify-content: center;
+}
+.list_item_table>div {
     white-space: nowrap;
     /* Không cho nội dung xuống dòng */
     overflow: hidden;
@@ -44,15 +82,6 @@ a.add_food:hover {
     /* Hiển thị "..." khi nội dung bị cắt */
 }
 
-.list_item {
-    display: grid;
-    grid-template-columns:
-        minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(7rem, 10rem) minmax(5rem, 7rem) minmax(10rem, 15rem) minmax(5rem, 7rem) minmax(5rem, 7rem) minmax(5rem, 7rem);
-    font-size: 1.2rem;
-    height: 5rem;
-    align-items: center;
-    justify-content: center;
-}
 
 .list_item img {
     width: 4rem;
@@ -74,7 +103,7 @@ a.add_food:hover {
 .delete {
     color: #e72929;
 }
-
-.detail {
-    color: darkblue;
+.title {
+    font-size: 1.7rem;
+    font-weight: 600;
 }
